--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -10,7 +10,7 @@
   font-size: 18px;
   color: #fff;
   cursor: pointer;
-  background-color: var(--primary);
+  background-color: orange !important;
 }
 
 .btn:hover {
@@ -21,4 +21,10 @@
   border-radius: 4px;
   border: 2px solid var(--primary);
   transition: all 0.3s ease-out;
+}
+
+@media screen and (max-width: 960px) {
+  .btn{
+    background-color: orange !important;
+  }
 }
